正式改动为正式项目  1.1.0  >启动页 （添加了隐藏系统栏）  >实现下拉刷新以及banner  >实现模仿抖音的初期框架

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorYellow">#E9967A</color>
+    <color name="dark_gray">#1c1c1c</color>
+
 
 </resources>
