--- a/app/src/main/res/layout/vedio_item_layout.xml
+++ b/app/src/main/res/layout/vedio_item_layout.xml
@@ -10,18 +10,27 @@
     android:foreground="?attr/selectableItemBackground"
     android:layout_marginTop="30dp"
     android:layout_marginBottom="30dp"
+    android:layout_gravity="center"
     android:layout_width="300dp"
-    android:layout_height="match_parent">
+    android:layout_height="400dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="match_parent">
-        <ImageView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_weight="7"
             android:scaleType="fitXY"
-            android:id="@+id/img"
-            android:layout_height="0dp" />
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/img" />
+
+        </RelativeLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_weight="3"
